# aiwatcher-mcp

./: .env.example  .gitignore  .mcpbignore  CHANGELOG.md  INSTALL.md  README.md  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  pyproject.toml  start.bat  start.ps1
assets/: ICON_PLACEHOLDER.txt
docs/: PRD.md
scripts/: install_task.ps1  morning_alert.py
src/aiwatcher_mcp/: __init__.py  __main__.py  _version.py  alerting.py  api.py  calibre_integration.py  config.py  database.py  distillation.py  email_delivery.py  gmail_ingestion.py  ingestion.py  scheduler.py  server.py
webapp/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
webapp/src/: App.tsx  index.css  main.tsx
webapp/src/components/: Shell.tsx  StatusBar.tsx  UrgencyBadge.tsx
webapp/src/pages/: AppsPage.tsx  Dashboard.tsx  DigestPage.tsx  FeedsPage.tsx  HelpPage.tsx  NewsPage.tsx  SettingsPage.tsx  ToolsPage.tsx
